# snapper

./: meson.build  snapper.desktop
snap/: snapcraft.yaml
snap/patches/: appstream_paths.patch
snap/plugins/: x-meson.py
src/: app-row-snap.vala  app-row.vala  app-tile.vala  app-update-row.vala  app-window.vala  app.vala  async-image.vala  details-page.vala  fwupd-app.vala  fwupd.vapi  home-page.vala  installed-page.vala  lazy-icon.vala  meson.build  odrs.vala  pk-app.vala  promotion-page.vala  search-page.vala  section-list.vala  snap-app.vala  snapper.vala  updates-page.vala
