snapper = executable ('snapper',
                      [ 'config.vapi',
                        'app-window.vala',
                        'app-row.vala',
                        'snapper.vala' ],
                      dependencies: [ gdk_pixbuf_dep, gtk_dep, libsoup_dep, snapd_glib_dep ],
                      vala_args: [ '--pkg=posix' ],
                      c_args: [ '-DVERSION="@0@"'.format (meson.project_version ()),
                                '-DGETTEXT_PACKAGE="snapper"',
                                '-DLOCALE_DIR="@0@"'.format (localedir) ],
                      install: true )
