snapper = executable ('snapper',
                      [ 'config.vapi',
                        'app.vala',
                        'app-window.vala',
                        'app-row.vala',
                        'app-tile.vala',
                        'app-update-row.vala',
                        'async-image.vala',
                        'details-page.vala',
                        'home-page.vala',
                        'installed-page.vala',
                        'pk-app.vala',
                        'section-list.vala',
                        'search-page.vala',
                        'snap-app.vala',
                        'snapper.vala',
                        'updates-page.vala' ],
                      dependencies: [ appstream_dep, gdk_pixbuf_dep, gtk_dep, libsoup_dep, packagekit_glib_dep, snapd_glib_dep ],
                      vala_args: [ '--pkg=posix' ],
                      c_args: [ '-DVERSION="@0@"'.format (meson.project_version ()),
                                '-DGETTEXT_PACKAGE="snapper"',
                                '-DLOCALE_DIR="@0@"'.format (localedir),
                                '-DI_KNOW_THE_PACKAGEKIT_GLIB2_API_IS_SUBJECT_TO_CHANGE' ],
                      install: true )
